--- a/data/tareas.json
+++ b/data/tareas.json
@@ -1,1 +1,14 @@
-[]
+[
+  {
+    "id": 1,
+    "titulo": "Tarea 3",
+    "descripcion": "tarea 3 prueba",
+    "curso": "Matematica",
+    "tipo": "tarea",
+    "fechaEntrega": "2025-12-29",
+    "puntos": 20,
+    "profesor_id": "PROF111",
+    "estado": "activa",
+    "fecha_creacion": "2025-12-24T19:12:58.939863"
+  }
+]
